--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,14 @@
   <name>mySocket</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+   <properties>
+        <org.springframework.version>4.3.7.RELEASE</org.springframework.version>
+    	<!-- 文件拷贝时的编码 -->    
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>    
+        <!-- 编译时的编码 -->    
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+    </properties>
 
   <dependencies>
     <dependency>
@@ -22,4 +27,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<configuration>
+  				<source>1.8</source>
+				<target>1.8</target>
+				<encoding>UTF-8</encoding>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
+  
 </project>
